# parallel-programming

./: .gitignore  .gitmodules  README.md
10025 Fast Image Match-OpenMP/: Makefile  yuan.out
10025. Fast Image Match (OpenMP)/: main.c  yuan.in
10080 Fast Matrix Multiplication-pthread/: 0.out  4.out  Makefile  matrix_fast.c  matrix_slow.c
10080. Fast Matrix Multiplication (pthread)/: 1.out  2.out  3.out  main.c  matrix.h
10084 Prefix Sum-pthread/: Makefile  prefixsum-pthread.c
10084. Prefix Sum (pthread)/: Makefile  prefixsum-seq.c
10085 Parallel Count-debug/: 2.out  3.out  job_done.c  sum.c
10085. Parallel Count (debug)/: 2.in  3.in  Makefile  job.c  main.c
10088 Prefix Sum-OpenMP/: prefixsum-openmp.c  secret.c
10088. Prefix Sum (OpenMP)/: Makefile  prefixsum-seq.c  utils.h
10089 Print Platform Information-OpenCL/: Makefile  main.c  refans.c
10089. Print Platform Information (OpenCL)/: main.c  server.py
10090. Dot Product (OpenCL)/: CMakeLists.txt  Makefile  host.c  src.c  vecdot.cl
10092. OpenCL Build Program Debug/: Makefile  main.c
